--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>Yuntian Xue</h1>
-    <img src="https://github.com/yuntianx10/yuntian.github.io/blob/main/img/Profile.jpeg" alt="Profile of Yuntian">
+    <img src="/img/Profile.jpeg" alt="Profile of Yuntian">
     <p>I am a Ph.D. in Biomedical Engineering.</p>
     <p>My academic training and research experience to date have provided me with a professional background in
         biomechanics, microfluidics, stem cell and retinal organoids biology, two-photon microscopy, and 3D printing.
